# misonius

./: .deepsource.toml  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.musonius/: config.yaml
.musonius/epics/epic-1b69830c/: spec.md
.musonius/epics/epic-aed9e3f1/: spec.md
.musonius/epics/epic-aed9e3f1/phases/: phase-01.md
.musonius/index/: checksums.json
.musonius/sot/: API-001.md  ARCH-001.md
docs/: AGENT-HANDOFF.md  ARCHITECTURE.md  COMPETITIVE-ANALYSIS.md  MEMORY-SYSTEM.md  PROJECT.md  TASK-MODES.md  TECH-STACK.md
docs/adr/: 001-why-sqlite.md  002-why-tree-sitter.md  003-why-litellm.md
docs/design/: SYSTEM-DESIGN.md
docs/implementation/: PHASES-2-5-SUMMARY.md
musonius/: __init__.py  __main__.py
musonius/cli/: __init__.py  agents.py  dashboard.py  display.py  doctor.py  go.py  history.py  init.py  main.py  memory.py  plan.py  prep.py  review.py  rollback.py  run.py  serve.py  status.py  utils.py  verify.py
musonius/config/: __init__.py  defaults.py  loader.py
musonius/context/: __init__.py  budget.py  engine.py  indexer.py  models.py  repo_map.py
musonius/context/agents/: __init__.py  base.py  claude.py  cursor.py  custom.py  gemini.py  generic.py  grok.py  registry.py
musonius/intent/: __init__.py  clarifier.py  engine.py
musonius/mcp/: __init__.py  __main__.py  server.py
musonius/memory/: __init__.py  activity.py  convention_detector.py  store.py
musonius/orchestration/: __init__.py  cli_backend.py  cost.py  engine.py  router.py  usage.py
musonius/planning/: __init__.py  engine.py  prompts.py  schemas.py
musonius/verification/: __init__.py  diff_analyzer.py  engine.py  linter.py  severity.py
scripts/: setup.sh
tests/: test_activity.py  test_agents.py  test_budget.py  test_cli.py  test_closed_loop.py  test_config.py  test_context_engine.py  test_convention_detector.py  test_cost.py  test_display.py  test_doctor.py  test_e2e_pipeline.py  test_history.py  test_indexer.py  test_intent.py  test_mcp.py  test_memory.py  test_planning.py  test_repo_map.py  test_router.py  test_verification.py
tests/fixtures/sample_project/: main.py  utils.py
